updated for 6.5.x branch